fix tags spacing

--- a/src/less/wahl17.less
+++ b/src/less/wahl17.less
@@ -193,10 +193,12 @@ b, strong {
 }
 
 .tags {
+    margin-top: .5rem;
+    
     &__tag {
         display: inline-block;
         padding: 0.3rem 0.4rem;
-        margin-right: 0.5rem;
+        margin: 0 .5rem .5rem 0;
         
         background-color: #999;
         border-radius:3px;
